--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,56 @@
-# Compiled class file
+####################################
+# Java
+####################################
+
+# Compiled class files
 *.class
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Package files
 *.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
+*.nar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+# JVM crash logs
 hs_err_pid*
 replay_pid*
+
+####################################
+# Logs
+####################################
+
+*.log
+
+####################################
+# IntelliJ IDEA
+####################################
+
+# IntelliJ project files
+.idea/
+*.iml
+
+# IntelliJ build output
+/out/
+
+####################################
+# OS files
+####################################
+
+# Windows
+Thumbs.db
+desktop.ini
+
+# macOS
+.DS_Store
+
+# Linux
+*~
+
+####################################
+# Temporary files
+####################################
+
+*.tmp
+*.bak
+*.swp
+*.old
